preceding a segment in the Comments pane

  Bug fixes:

  - When using a search or replace filter, the last change made before 
removing the filter or pressing Cancel could be lost

  - Alternative translation overwrites the default one in team project
  https://sourceforge.net/p/omegat/bugs/678/

  - "Properties..." menu is disabled in team projects 
  https://sourceforge.net/p/omegat/bugs/673/

  Localisation updates:

  - Dutch localisation updated to 3.1.0 (UI, Documentation, Readme)
  - Galician localisation updated to 3.1.0 (UI, Documentation, Readme)
  - Italian localisation updated to 3.1.0 (UI, Documentation)
  - Japanese localisation updated to 3.1.1 (UI, Readme)

----------------------------------------------------------------------
 OmegaT 3.1.0 (2014-04-14)
----------------------------------------------------------------------
  34 Enhancements
   7 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.1.0 vs. 3.0.8 update 5

  Implemented requests:

  - Add facility for conflict resolution during team sync
  https://sourceforge.net/p/omegat/feature-requests/950/

  - Find and Replace (poss. with regex) 
  https://sourceforge.net/p/omegat/feature-requests/66/

  - Search in comments
  https://sourceforge.net/p/omegat/feature-requests/943/

  - Show XLIFF multiple trans-unit notes 
  https://sourceforge.net/p/omegat/feature-requests/949/

  - Allow custom sorting order of project files
  https://sourceforge.net/p/omegat/feature-requests/788/

  - Improve exception processing in console mode
  https://sourceforge.net/p/omegat/bugs/607/

  - Extend project statistics with the number of files in which they occur
  https://sourceforge.net/p/omegat/feature-requests/910/

  - Mark auto-populated segments 
  https://sourceforge.net/p/omegat/feature-requests/963/

  - Priority TM to override project_save.tmx 
  https://sourceforge.net/p/omegat/feature-requests/957/

  - Localisation support for scripts 